<resources>
    <string name="app_name"> </string>
    <string name="splash_img">Start Up Image</string>
    <string name="current_wifi">Current Wifi Status</string>
    <string name="parse">parse</string>
    <string name="gauges_view">Gauges View</string>
    <string name="progressive_graph_view">Progressive Graph View</string>
    <string name="boost">Boost</string>
    <string name="egt">EGT</string>
    <string name="coolant">Coolant</string>
    <string name="fuel_rate">Fuel\n Rate</string>
    <string name="oil_pressure">Oil\n Pressure</string>
    <string name="turbo_vanes">Turbo\n Vanes</string>
    <string name="switch_background">Switch Background</string>
    <string name="wifi_connection">Wifi Connected</string>
    <string name="info_button">Info Button</string>
    <string name="tune_title">Tune Title</string>
    <string name="connected">Connected</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="wifi_ssid">Wifi SSID</string>
    <string name="change_settings">Change Settings</string>
    <string name="show_wifi">Display WiFi Settings</string>
    <string name="change_wifi_settings">CHANGE WIFI SETTINGS</string>
    <string name="link_speed">Link Speed</string>
    <string name="no_connection">Wifi not Connected</string>
    <string name="button_for_gauge_6">Button for Gauge 6</string>
    <string name="button_for_gauge_1">Button for gauge 1</string>
    <string name="button_for_gauge_2">Button for gauge 2</string>
    <string name="button_for_gauge_3">Button for gauge 3</string>
    <string name="button_for_gauge_4">Button for gauge 4</string>
    <string name="button_for_gauge_5">Button for gauge 5</string>
    <string name="help_button">Help Button</string>
    <string name="gauge_1">Gauge 1</string>
    <string name="gauge_2">Gauge 2</string>
    <string name="live_data">LIVE DATA</string>
    <string name="gauge_1_small">Gauge 1 Small</string>
    <string name="gauge_2_small">Gauge 2 Small</string>
    <string name="gauge_3_small">Gauge 3 Small</string>
    <string name="gauge_4_small">Gauge 4 Small</string>
    <string name="wifi_button">wifi_button</string>
    <string name="back">BACK</string>
    <string name="more">MORE</string>
    <string name="timing">Timing</string>
    <string name="frp">FRP</string>
    <string name="tune">TUNE:</string>
    <string name="gear_position">GEAR:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="needle_gauge_view">Needle Gauge View</string>
    <string name="default_gauge_view">Default Gauge View</string>
    <string name="bonus_features">BONUS FEATURES</string>
    <string name="gdp_tuning">GDP TUNING</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Action Settings</string>
    <string name="info">Info</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="custom_settings">CUSTOM SETTINGS</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="read_codes">READ CODES</string>
    <string name="clear_codes">CLEAR CODES</string>
    <string name="diagnostics">DIAGNOSTICS</string>
    <string name="plain_background">Plain Background</string>
    <string name="gdp_logo">GDP Logo</string>
    <string name="tune_switching">TUNE SWITCHING</string>
    <string name="background_with_logo">Background With Logo</string>
    <string name="features">Features</string>
    <string name="configuration">CONFIGURATION</string>
    <string name="program">PROGRAM</string>
    <string name="read_settings">READ SETTINGS</string>
    <string name="home">HOME</string>


</resources>
