<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".FeaturesActivity"
    tools:ignore="spusage">


    <Button
        android:id="@+id/btn_home"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:background="@color/transparent"
        android:text="@string/home"
        android:textColor="@color/colorGray"
        android:textSize="26dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_middle_logo"
        android:contentDescription="@string/background_with_logo" />

    <TextView
        android:id="@+id/tunenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="125dp"
        android:text="@string/tune"
        android:textColor="@color/colorGray"
        android:textSize="26dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/gear_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/gear_position"
        android:textColor="@color/colorGray"
        android:textSize="26dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/features"
        android:textColor="@color/colorGray"
        android:textSize="46dp" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:tabIndicatorColor="@color/colorBlack"
        app:tabSelectedTextColor="?attr/speedtext_color"
        app:tabTextColor="?attr/tab_off_color" />


    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <Button
        android:id="@+id/program_features"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="450dp"
        android:layout_marginBottom="30dp"
        android:text="@string/program"
        android:textSize="24dp" />

    <Button
        android:id="@+id/read_settings"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="30dp"
        android:text="@string/read_settings"
        android:textSize="24dp" />

</RelativeLayout>