<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="spusage">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_middle_logo"
        android:contentDescription="@string/background_with_logo" />

    <de.nitri.gauge.Gauge
        android:id="@+id/gauge2_1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="150dp"
        gauge:faceColor="@color/colorBlackTransparent"
        gauge:labelTextSize="16"
        gauge:needleColor="?attr/speedtext_color"
        gauge:scaleColor="?attr/speedtext_color" />

    <de.nitri.gauge.Gauge
        android:id="@+id/gauge2_2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="150dp"
        gauge:faceColor="@color/colorBlackTransparent"
        gauge:labelTextSize="20"
        gauge:needleColor="?attr/speedtext_color"
        gauge:scaleColor="?attr/speedtext_color" />

    <ImageView
        android:id="@+id/gauge1_large"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignStart="@+id/gauge2_1"
        android:layout_alignTop="@id/gauge2_1"
        android:contentDescription="@string/gauge_1"
        app:srcCompat="@drawable/gauge_cover" />

    <ImageView
        android:id="@+id/gauge2_large"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignStart="@+id/gauge2_2"
        android:layout_alignTop="@id/gauge2_2"
        android:contentDescription="@string/gauge_2"
        app:srcCompat="@drawable/gauge_cover" />

    <TextView
        android:id="@+id/liveDataView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/live_data"
        android:textColor="@color/colorGray"
        android:textSize="46dp" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gauge2_1"
        android:layout_alignEnd="@+id/gauge2_1"
        android:layout_alignStart="@+id/gauge2_1"
        android:layout_alignTop="@+id/gauge2_1"
        android:layout_marginBottom="-120dp"
        android:gravity="center"
        android:text="@string/frp"
        android:textColor="?attr/speedtext_color"
        android:textSize="16dp" />

    <ImageView
        android:id="@id/btn1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/gauge2_1"
        android:layout_alignEnd="@id/gauge2_1"
        android:layout_marginBottom="-45dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:contentDescription="@string/button_for_gauge_5" />

    <ImageView
        android:id="@id/btn2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@id/gauge2_2"
        android:layout_alignEnd="@id/gauge2_2"
        android:layout_marginBottom="-45dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button"
        android:contentDescription="@string/button_for_gauge_5" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gauge2_2"
        android:layout_alignEnd="@+id/gauge2_2"
        android:layout_alignStart="@+id/gauge2_2"
        android:layout_alignTop="@+id/gauge2_2"
        android:layout_marginBottom="-120dp"
        android:gravity="center"
        android:text="@string/timing"
        android:textColor="?attr/speedtext_color"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:text="HOME"
        android:textColor="@color/colorGray"
        android:textSize="26dp" />

    <TextView
        android:id="@+id/frp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn1"
        android:layout_alignEnd="@+id/btn1"
        android:layout_alignStart="@+id/btn1"
        android:layout_alignTop="@+id/btn1"
        android:gravity="center"
        android:textColor="?attr/speedtext_color"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/timing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn2"
        android:layout_alignEnd="@+id/btn2"
        android:layout_alignStart="@+id/btn2"
        android:layout_alignTop="@+id/btn2"
        android:gravity="center"
        android:textColor="?attr/speedtext_color"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tunenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="125dp"
        android:layout_marginTop="8dp"
        android:text="@string/tune"
        android:textColor="@color/colorGray"
        android:textSize="26dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/gear_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/gear_position"
        android:textColor="@color/colorGray"
        android:textSize="26dp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>